analyzer: Fix bootstrap with clang

gcc/analyzer/ChangeLog:
	PR bootstrap/102242
	* engine.cc (INCLUDE_UNIQUE_PTR): Define.